@startuml PipeFilterApplication
package PipeFilterApplication {
    class SerializationWords {

        sortList(List<String>)
        wordsToList(String)
    }
    
    
  

    class StartOperation {
        currentDirectory:String
        fileNameString:String
        myWords:Words
        main()
    }
    
    

    class Words {
        inputFileURL:String
        originalString:String
        orignalList:List<String>
        outputFileURL:String
        sortedList:List<String>
    }
    
    

    class WordsIO {
        writeWords(List<String>, String)
        readWords(String)
    }
    

}

StartOperation..>SerializationWords : Use
StartOperation ..> WordsIO : Use
WordsIO ..> StringBuilder : content
WordsIO ..> java.io.BufferedReader : reader
SerializationWords *--> ArrayList : myWordsList
StartOperation *--> Words : myWords
Words *--> ArrayList : orignalList
Words *--> ArrayList : sortedList
center footer Generated by Rongwei Ji
